Java 11, twitter bootstrap 4, jquery and open iconic as webjars